did some structural organizing

--- a/index.html
+++ b/index.html
@@ -3,29 +3,32 @@
 
 <head>
     <title>Geoff's Resume</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel ="stylesheet" type ="text/css" href ="style.css">
 </head>
 
 <body>
     <div id ="titleBlock">
         <h1>Geoff Camp</h1>
-        <h2>(role title)<h2>
+        <h2>coolest guy</h2>
         <div class ="content">
-            geoffersonc@gmail.com
-            226-203-4809
-            geofferson.me
+            <ul>
+                <li>geoffersonc@gmail.com</li>
+                <li>226-203-4809</li>
+                <li>geofferson.me</li>
+            </ul>
         </div>
         <img id ="pic" src =""/>
     </div>
     <div id ="about" class ="section">
-        <h1>About</h1>
+        <h2>About</h2>
         <div class ="content">
         
         </div>
     </div>
 
     <div id ="experience" class ="section">
-        <h1>Work Experience</h1>
+        <h2>Work Experience</h2>
         <div class ="content">
             <ul>
                 <li> 
