--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         <h2>coolest guy</h2>
         <div class ="content">
             <ul>
-                <li>geoffersonc@gmail.com</li>
-                <li>226-203-4809</li>
+                <li id ="contact1">geoffersonc@gmail.com</li>
+                <li id ="contact2">226-203-4809</li>
                 <li>geofferson.me</li>
             </ul>
         </div>
@@ -23,17 +23,35 @@
     <div id ="about" class ="section">
         <h2>About</h2>
         <div class ="content">
-        
+            <p>
+                This is geoff mhmmmm
+            </p> 
+        </div>
+    </div>
+
+    <div id ="education" class ="section">
+        <h2>Education</h2>
+        <div class ="content">
+            <div class ="sectionTitle">University of Guelph</div>
+            <div class ="programTitle">Bachelor of Computing, General</div>
+            <div class ="year">2014-2016</div>
+            <div class ="programTitle">Bachelor of Engineering, Biological Engineering</div>
+            <div class ="year">2009 - 2013</div>
         </div>
     </div>
 
     <div id ="experience" class ="section">
         <h2>Work Experience</h2>
         <div class ="content">
-            <ul>
-                <li> 
-                </li>
-            </ul>
+            <div class ="experience">
+                <div class ="sectionTitle">Place 1</div>
+                <div class ="expPos">Programmer</div>
+                <div class ="year">1900-2100</div>
+                <div class ="expDesc">Comopany that does cool shit</div>
+                <ul>
+                    <li>crushed newbies</li>
+                </ul>
+            </div>
         </div>
     </div>
 </body>
