--- a/index.html
+++ b/index.html
@@ -20,12 +20,27 @@
         </div>
         <img id ="pic" src =""/>
     </div>
-    <div id ="about" class ="section">
+    <!-- <div id ="about" class ="section">
         <h2>About</h2>
         <div class ="content">
             <p>
                 This is geoff mhmmmm
             </p> 
+        </div>
+    </div> -->
+    <div id ="skills" class ="section">
+        <h2>Skills</h2>
+        <div class ="content">
+            <ul>
+                <li>
+                    <h3></h3>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </li>
+            </ul> 
         </div>
     </div>
 
@@ -34,7 +49,7 @@
         <div class ="content">
             <div class ="sectionTitle">University of Guelph</div>
             <div class ="programTitle">Bachelor of Computing, General</div>
-            <div class ="year">2014-2016</div>
+            <div class ="year">2014 - 2016</div>
             <div class ="programTitle">Bachelor of Engineering, Biological Engineering</div>
             <div class ="year">2009 - 2013</div>
         </div>
