--- a/index.html
+++ b/index.html
@@ -31,15 +31,31 @@
     <div id ="skills" class ="section">
         <h2>Skills</h2>
         <div class ="content">
-            <ul>
-                <li>
-                    <h3></h3>
+            <ul id ="skillsMainLi">
+                <li class ="primarySkillLi">
+                    <h3>Programming</h3>
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>C Language - 2+ years</li>
+                        <li>Object Oriented (Java and Swift) - 1 year</li>
+                        <li>Full stack web development - 3+ years</li>
                     </ul>
                 </li>
+                <li class ="primarySkillLi">
+                    <h3>Engineering</h3>
+                    <ul>
+                        <li>Project Organization - 6+ years</li>
+                        <li>Design - 6+ years</li>
+                        <li>Circuit simulation and System Control - 1 year</li>
+                    </ul>
+                </li>
+                 <li class ="primarySkillLi">
+                    <h3>Soft</h3>
+                    <ul>
+                        <li>Professional Communication - 5+ years</li>
+                        <li>Problem Solving - 6+ years</li>
+                        <li>Team Work - 6+ years</li>
+                    </ul>
+                </li>               
             </ul> 
         </div>
     </div>
@@ -59,12 +75,39 @@
         <h2>Work Experience</h2>
         <div class ="content">
             <div class ="experience">
-                <div class ="sectionTitle">Place 1</div>
-                <div class ="expPos">Programmer</div>
-                <div class ="year">1900-2100</div>
-                <div class ="expDesc">Comopany that does cool shit</div>
+                <div class ="sectionTitle">Yumr</div>
+                <div class ="expPos">Co-Founder and Technical Lead</div>
+                <div class ="year">2015 - 2016</div>
+                <div class ="expDesc">Yumr is a mobile platform focusing on food sharing and discovery.</div>
                 <ul>
-                    <li>crushed newbies</li>
+                    <li>Developed the Yumr android application in Java.</li>
+                    <li>Developed the Yumr iOS application in Swift.</li>
+                    <li>Worked in collaboration with other developers, managers, and marketers.</li>
+                    <li>Liasoned between Yumr and the technical departments of its partners.</li>
+                </ul>
+            </div>
+            <div class ="experience">
+                <div class ="sectionTitle">Canadian Solar</div>
+                <div class ="expPos">Quality Technician</div>
+                <div class ="year">April 2014 - August 2014</div>
+                <div class ="expDesc">Canadian Solar is a solar panel manufacturing company based in Guelph, ON.</div>
+                <ul>
+                    <li>Supervised and mentored by two quality engineers while analysing QA issues, and designing and implementing solutions.</li>
+                    <li>Collaborated with manufacturing, engineering, and health and safety departments to solve solar panel quality issues.</li>
+                    <li>Was promoted to quality technician after two months of working on the manufacturing line.</li>
+                    <li>Wrote a Javascript program for the quality department that reduced work time by up to 50% on some tasks.</li>
+                </ul>
+            </div>
+            <div class ="experience">
+                <div class ="sectionTitle">Freelance Web Developer</div>
+                <div class ="expPos">Developer</div>
+                <div class ="year">2013 - 2015</div>
+                <div class ="expDesc">Designed and built web pages and web applications for clients during school semesters.</div>
+                <ul>
+                    <li>Supervised and mentored by two quality engineers while analysing quality issues, and designing and implementing quality solutions.</li>
+                    <li>Collaborated with manufacturing, engineering, and health and safety departments to solve solar panel quality issues.</li>
+                    <li>Was promoted to quality technician after two months of working on the manufacturing line.</li>
+                    <li>Wrote a Javascript program for the quality department that reduced work time by up to 50% on some tasks.</li>
                 </ul>
             </div>
         </div>
