--- a/index.html
+++ b/index.html
@@ -20,14 +20,6 @@
         </div>
         <img id ="pic" src =""/>
     </div>
-    <!-- <div id ="about" class ="section">
-        <h2>About</h2>
-        <div class ="content">
-            <p>
-                This is geoff mhmmmm
-            </p> 
-        </div>
-    </div> -->
     <div id ="skills" class ="section">
         <h2>Skills</h2>
         <div class ="content">
@@ -102,14 +94,32 @@
                 <div class ="sectionTitle">Freelance Web Developer</div>
                 <div class ="expPos">Developer</div>
                 <div class ="year">2013 - 2015</div>
-                <div class ="expDesc">Designed and built web pages and web applications for clients during school semesters.</div>
+                <div class ="expDesc">Designed and built web pages and web applications for clients inbetween school semesters.</div>
                 <ul>
-                    <li>Supervised and mentored by two quality engineers while analysing quality issues, and designing and implementing quality solutions.</li>
-                    <li>Collaborated with manufacturing, engineering, and health and safety departments to solve solar panel quality issues.</li>
-                    <li>Was promoted to quality technician after two months of working on the manufacturing line.</li>
-                    <li>Wrote a Javascript program for the quality department that reduced work time by up to 50% on some tasks.</li>
+                    <li>Discussed project requiments with clients.</li>
+                    <li>Implemented HTML, CSS, Javascript, PHP, and SQL languages.</li>
+                    <li>Performed basic graphic design tasks.</li>
                 </ul>
             </div>
+        </div>
+    </div>
+    <div id ="personalProjects" class ="section">
+        <h2>Personal Projects</h2>
+        <div class ="content">
+            <ul>
+                <li class ="project">
+                    <div class ="projTitle">WeatherWare</div>
+                    <div class ="projDesc">Android application programmed in Java that provides clothing recomendations based on weather conditions.</div>
+                </li>
+                <li class ="project">
+                    <div class ="projTitle">Mapgic</div>
+                    <div class ="projDesc">Web application that presents user uploaded images based on location. Requests to the SQL database were made with PHP and the front end was built with HTML, CSS, and Javascript.</div>
+                </li>
+                <li class ="project">
+                    <div class ="projTitle">Instant Messenger Web Application</div>
+                    <div class ="projDesc">Platform used to start text based conversations between contacts. The backend was built using the node.js framework on a mongo database.</div>
+                </li>
+            </ul>
         </div>
     </div>
 </body>
