--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id ="titleBlock">
         <h1>Geoff Camp</h1>
-        <h2>coolest guy</h2>
+        <h2>...aspiring software engineer</h2>
         <div class ="content">
             <ul>
                 <li id ="contact1">geoffersonc@gmail.com</li>
@@ -26,26 +26,26 @@
             <ul id ="skillsMainLi">
                 <li class ="primarySkillLi">
                     <h3>Programming</h3>
-                    <ul>
-                        <li>C Language - 2+ years</li>
-                        <li>Object Oriented (Java and Swift) - 1 year</li>
-                        <li>Full stack web development - 3+ years</li>
+                    <ul id ="skillCat1">
+                        <li>C Language &#9989 &#9989 <!--2+ years--></li>
+                        <li>Object Oriented (Java and Swift) &#9989 &#9989 <!-- 1 year--></li>
+                        <li>Full stack web development &#9989 &#9989<!-- 3+ years--></li>
                     </ul>
                 </li>
                 <li class ="primarySkillLi">
                     <h3>Engineering</h3>
-                    <ul>
-                        <li>Project Organization - 6+ years</li>
-                        <li>Design - 6+ years</li>
-                        <li>Circuit simulation and System Control - 1 year</li>
+                    <ul id ="skillCat2">
+                        <li>Project Organization &#9989 &#9989 &#9989<!-- 6+ years--></li>
+                        <li>Design &#9989 &#9989<!-- 6+ years--></li>
+                        <li>Circuit simulation and System Control &#9989<!-- 1 year--></li>
                     </ul>
                 </li>
                  <li class ="primarySkillLi">
                     <h3>Soft</h3>
                     <ul>
-                        <li>Professional Communication - 5+ years</li>
-                        <li>Problem Solving - 6+ years</li>
-                        <li>Team Work - 6+ years</li>
+                        <li>Professional Communication &#9989 &#9989<!-- 5+ years--></li>
+                        <li>Problem Solving &#9989 &#9989 &#9989<!-- 6+ years--></li>
+                        <li>Team Work &#9989 &#9989 &#9989<!-- 6+ years--></li>
                     </ul>
                 </li>               
             </ul> 
@@ -70,12 +70,12 @@
                 <div class ="sectionTitle">Yumr</div>
                 <div class ="expPos">Co-Founder and Technical Lead</div>
                 <div class ="year">2015 - 2016</div>
-                <div class ="expDesc">Yumr is a mobile platform focusing on food sharing and discovery.</div>
+                <div class ="expDesc">Operating out of the University of Waterloo's Velocity Garage, Yumr is a mobile platform built for food sharing and discovery.</div>
                 <ul>
                     <li>Developed the Yumr android application in Java.</li>
                     <li>Developed the Yumr iOS application in Swift.</li>
-                    <li>Worked in collaboration with other developers, managers, and marketers.</li>
-                    <li>Liasoned between Yumr and the technical departments of its partners.</li>
+                    <li>Worked in collaboration with other developers, managers, and marketers to create the Yumr platform.</li>
+                    <li>Liasoned between Yumr and its partners; including the Microsoft BizSpark program and Velocity.</li>
                 </ul>
             </div>
             <div class ="experience">
@@ -113,7 +113,7 @@
                 </li>
                 <li class ="project">
                     <div class ="projTitle">Mapgic</div>
-                    <div class ="projDesc">Web application that presents user uploaded images based on location. Requests to the SQL database were made with PHP and the front end was built with HTML, CSS, and Javascript.</div>
+                    <div class ="projDesc">Web application that presents user uploaded images based on location. Requests to a SQL database were made with PHP and the front end was built with HTML, CSS, and Javascript.</div>
                 </li>
                 <li class ="project">
                     <div class ="projTitle">Instant Messenger Web Application</div>
